<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AudioRecord Sample</string>
    <string name="hello">Hello, Android using native audio!</string>
    <string name="hello_short">Hello</string>
    <string name="android">Android</string>
    <string name="sawtooth">Sawtooth</string>
    <string name="embedded_soundtrack">Embedded\nsoundtrack</string>
    <string name="reverb">Reverb</string>
    <string name="mute_uri">Mute</string>
    <string name="enable_stereo_position_uri">Enable SP</string>
    <string name="uri_spinner">URI spinner</string>
    <string name="uri_soundtrack">URI\nsoundtrack</string>
    <string name="pause_uri">Pause\nURI</string>
    <string name="play_uri">Play\nURI</string>
    <string name="loop_uri">Loop\nURI</string>
    <string name="mute_left_uri">mute left</string>
    <string name="mute_right_uri">mute right</string>
    <string name="solo_left_uri">solo left</string>
    <string name="solo_right_uri">solo right</string>
    <string name="channels_uri">Get channels</string>
    <string name="volume_uri">Volume</string>
    <string name="pan_uri">Pan</string>
    <string name="record">Record</string>
    <string name="playback">Playback</string>
    <string-array name="uri_spinner_array">
        <item>http://www.freesound.org/data/previews/18/18765_18799-lq.mp3</item>
    </string-array>
    <string name="NeedRecordAudioPermission">"This sample needs RECORD_AUDIO permission"</string>
</resources>