<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/hello"
            android:text="@string/hello_short"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/android"
            android:text="@string/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/sawtooth"
            android:text="@string/sawtooth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/embedded_soundtrack"
            android:text="@string/embedded_soundtrack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/reverb"
            android:text="@string/reverb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/mute_uri"
            android:text="@string/mute_uri"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/enable_stereo_position_uri"
            android:text="@string/enable_stereo_position_uri"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Spinner
            android:id="@+id/uri_spinner"
            android:text="@string/uri_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/uri_soundtrack"
            android:text="@string/uri_soundtrack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/pause_uri"
            android:text="@string/pause_uri"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/play_uri"
            android:text="@string/play_uri"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/loop_uri"
            android:text="@string/loop_uri"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/mute_left_uri"
            android:text="@string/mute_left_uri"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/mute_right_uri"
            android:text="@string/mute_right_uri"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/solo_left_uri"
            android:text="@string/solo_left_uri"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/solo_right_uri"
            android:text="@string/solo_right_uri"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <Button
        android:id="@+id/channels_uri"
        android:text="@string/channels_uri"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <SeekBar
        android:id="@+id/volume_uri"
        android:text="@string/volume_uri"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <SeekBar
        android:id="@+id/pan_uri"
        android:text="@string/pan_uri"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/record"
        android:text="@string/record"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/playback"
        android:text="@string/playback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>